Fix image in blog screen and another attempt at aligning the caption

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ h1, h2, h3, p {
 }
 
 .headingCapt{
-    padding-left: 20%;
+    margin-left: 20%;
 }
 
 .headingImg{
